feat(delete): fixed delete re:mongodb, returned 204
